--- a/Web_Scraping_Toronto_Neighborhoods.ipynb
+++ b/Web_Scraping_Toronto_Neighborhoods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clustering Toronto Neighborhoods"
+    "# Web Scraping Toronto Neighborhoods"
    ]
   },
   {
