--- a/Long_Lat_Toronto_Neighborhoods (1).ipynb
+++ b/Long_Lat_Toronto_Neighborhoods (1).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clustering Toronto Neighborhoods"
+    "# Longitiude and Latitude of Toronto Neighborhoods"
    ]
   },
   {
