--- a/Clustering_Toronto_Neighborhoods.ipynb
+++ b/Clustering_Toronto_Neighborhoods.ipynb
@@ -16643,7 +16643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To Finish, we will view our clusters."
+    "To Finish, we will view our clusters. The following is a map that illustrates the Toronto neighborhoods clustered into 6 groups."
    ]
   },
   {
