--- a/Capstone_Lowering_Crime_ML_Clustering.ipynb
+++ b/Capstone_Lowering_Crime_ML_Clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lowering the crime rate in St. Louis Missouri with Machine Learning"
+    "### Lowering Crime Rate with Machine Learning Clustering"
    ]
   },
   {
